<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="mediocre_service">Mediocre (10%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="number_of_people">Number of people:</string>
    <string name="one" translatable="false">1</string>
    <string name="grand_total">Grand Total: %s</string>
    <string name="per_person">Per Person: %s</string>
    <string name="enter_number_people">Please enter the number of people</string>
</resources>